<resources>
    <string name="app_name">Intro to Ora Language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oraNumsText">Numbers</string>
    <string name="oraNumbers">Ora Numbers</string>
    <string name="OutdoorText">Outdoor</string>
    <string name="TravelText">Travel</string>
    <string name="enter_english_word">Enter English Word(s)</string>
    <string name="enter_ora_word">Enter Ora Word(s)</string>
    <string name="add_audio_of_spoken_words">Add audio of written words</string>
    <string name="somewhere_down_in_edo_state_nigeria_resides_the_people_of_owan_west">SOMEWHERE DOWN IN EDO STATE NIGERIA RESIDES THE PEOPLE OF THE OWAN WEST</string>
    <string name="these_are_the_ora_s_and_here_lies_an_introduction_to_their_language">THESE ARE THE ORA\'S! AND HERE LIES AN INTRODUCTION TO THEIR LANGUAGE</string>
    <string name="record_audio">Record audio</string>
    <string name="get_audio_file">Get audio file</string>
    <string name="alert_tilte">Create New Ora Item</string>
    <string name="select_time_dialog_title">Select date and time to add new ora word </string>
    <string name="alert_submit">Submit</string>
    <string name="date_picker_alert_positive">Submit Reminder</string>
    <string name="date_picker_alert_negative">Cancel Reminder</string>
    <string name="alert_cancel">CANCLEL</string>
    <string name="household">household</string>
    <string name="remind_me_to_add_ora_word_later">remind me to add ora word later</string>
    <string name="search_for_ora_word">Search for ora word</string>
    <string name="notification_title">Ora Num Reminder</string>
    <string name="notification_text">Reminder to add new ora word</string>
    <string name="text_forgot_password_title">forgot you password ?</string>
    <string name="text_forgot_password_message">Enter your email to retrieve password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using Gmail</string>
    <string name="text_signup_social_media">Or Sign up using Gmail</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="forgotpassword">o! you forgot your password! don\'t worry, enter your email and we\'ll send you a link to reset your password</string>
    <string name="retieveemail">enter your registered email</string>
    <string name="sendreset">Send Reset Email</string>
    <string name="welcome">Enter your details and lets get you started</string>
    <string name="name">Enter your name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="enter_password">Enter Chosen Password</string>
    <string name="confirm_password">Confirm Chosen Password</string>
    <string name="register">Register</string>
    <string name="account_holder">Already have an account? just login</string>
    <string name="signin">Log Into Your Account</string>
    <string name="login">LOGIN</string>
    <string name="create_new">Don\'t have an account? Create One</string>
    <string name="forgottenpassword">Forgotten Password?</string>
    <string name="welcome_profile">Welcome to your profile</string>
    <string name="logout">LOGOUT</string>
    <string name="ora_user_profile">Ora User Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_oraitem_tex">Edit your English or Ora words here</string>
    <string name="change_audio">Change audio of spoken word</string>
    <string name="save_updated_oraword">Update OraWord</string>
    <string name="disgard_edit">Disgard Edit</string>
    <string name="ora_home">Ora Home</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="add_new">Add new OraItem</string>
    <string name="play">play</string>
    <string name="orasegmenticon">OraSegmentIcon</string>
    <string name="textview">TextView</string>
    <string name="update_ora_user_profile">Update User Profile</string>
    <string name="finish">finish</string>
    <string name="next">Next</string>
    <string name="theoraslanguage">FEEL FREE TO LEARN AND ADD WORDS TO THE DIGITIZATION AND PRESERVATION OF THE LANGUAGE</string>
    <string name="delete_info">SWIPE RIGHT OR LEFT TO DELETE A WORD</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_on">Night Mode on</string>
    <string name="about_the_app">Intro to Ora Language, is an app made for the capture, digitalization and preservation of the language of the Ora\'s, a small group of communities in Edo State, Nigeria. Developed by AndroidPhrophet, Ora words voiced by my younger brother, my sister, and my dad.</string>
    <string name="_2021">© 2021</string>
    <string name="invite">Invite Friends</string>
</resources>
